kuber/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: orgfin-backend-label
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: backend-public
spec:
  type: NodePort
  selector:
    app: orgfin-backend-label
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31800
